--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<div class="cent_con">
 			<h2>What we do.</h2>
 			<h3>The areas that we're specialized in.</h3>
-			<div class="dgff d-flex">
+			<div class="doc d-flex">
 				<article>
 					<img src="img/Product.jpg" alt="Product">
 					<div class="describe">
