--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
   <link href="https://fonts.googleapis.com/css2?family=Poppins&amp;display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/owl.carousel.css">
+	<link rel="stylesheet" href="css/owl.theme.default.css">
+	<link rel="stylesheet" href="css/style.css">
 	<title>Aperture</title>
 </head>
 <body>
@@ -113,6 +115,29 @@
 				<li><a href="#">Costa Rica</a></li>
 			</ul>
 	</section>
+	<section class="past_clients">
+		<h2>Past clients</h2>
+		<h4>Trusted by your favourite companies</h4>
+		<div class="clien_art owl-carousel">
+				<article>
+					<a href="#"><img src="img/client1.svg" alt="logo"></a>
+				</article>
+				<article>
+					<a href="#"><img src="img/client2.svg" alt="logo"></a>
+				</article>
+				<article>
+					<a href="#"><img src="img/client3.svg" alt="logo"></a>
+				</article>
+				<article>
+					<a href="#"><img src="img/client4.svg" alt="logo"></a>
+				</article>
+				<article>
+					<a href="#"><img src="img/client5.svg" alt="logo"></a>
+				</article>
+				</div>
+			</div>
+		
+	</section>
 	<section class="Nepal">
 		<div class="description3">
 			<h5>Star fall in the Himalayas</h5>
@@ -125,5 +150,8 @@
 				<li><a href="#">Nepal</a></li>
 			</ul>
 	</section>
+	<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+	<script src="js/owl.carousel.js"></script>
+	<script src="js/scripts.js"></script>
 </body>
 </html>
