--- a/index.html
+++ b/index.html
@@ -134,6 +134,66 @@
 				<article>
 					<a href="#"><img src="img/client5.svg" alt="logo"></a>
 				</article>
+				<article>
+					<a href="#"><img src="img/client1.svg" alt="logo"></a>
+				</article>
+				<article>
+					<a href="#"><img src="img/client2.svg" alt="logo"></a>
+				</article>
+				<article>
+					<a href="#"><img src="img/client3.svg" alt="logo"></a>
+				</article>
+				<article>
+					<a href="#"><img src="img/client4.svg" alt="logo"></a>
+				</article>
+				<article>
+					<a href="#"><img src="img/client5.svg" alt="logo"></a>
+				</article>				
+				<article>
+					<a href="#"><img src="img/client1.svg" alt="logo"></a>
+				</article>
+				<article>
+					<a href="#"><img src="img/client2.svg" alt="logo"></a>
+				</article>
+				<article>
+					<a href="#"><img src="img/client3.svg" alt="logo"></a>
+				</article>
+				<article>
+					<a href="#"><img src="img/client4.svg" alt="logo"></a>
+				</article>
+				<article>
+					<a href="#"><img src="img/client5.svg" alt="logo"></a>
+				</article>
+				<article>
+					<a href="#"><img src="img/client1.svg" alt="logo"></a>
+				</article>
+				<article>
+					<a href="#"><img src="img/client2.svg" alt="logo"></a>
+				</article>
+				<article>
+					<a href="#"><img src="img/client3.svg" alt="logo"></a>
+				</article>
+				<article>
+					<a href="#"><img src="img/client4.svg" alt="logo"></a>
+				</article>
+				<article>
+					<a href="#"><img src="img/client5.svg" alt="logo"></a>
+				</article>
+				<article>
+					<a href="#"><img src="img/client1.svg" alt="logo"></a>
+				</article>
+				<article>
+					<a href="#"><img src="img/client2.svg" alt="logo"></a>
+				</article>
+				<article>
+					<a href="#"><img src="img/client3.svg" alt="logo"></a>
+				</article>
+				<article>
+					<a href="#"><img src="img/client4.svg" alt="logo"></a>
+				</article>
+				<article>
+					<a href="#"><img src="img/client5.svg" alt="logo"></a>
+				</article>
 				</div>
 			</div>
 		
