--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins&amp;display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="https://resources/demos/style.css">
-  <link rel="stylesheet" href="css/owl.carousel.css">
-	<link rel="stylesheet" href="css/owl.theme.default.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style_preproc.css">
 </head>
 <body>
 	<header class="cd-header">
@@ -41,30 +39,6 @@
 	</header>
 	<div class='cursor2' id="cursor2"></div>
 	<div class='cursor3' id="cursor3"></div>
-	<!-- <header>
-		<div class="m_header">
-			<a class="logo" href="#"></a>
-			<nav>
-				<ul>
-					<li> 
-						<a href="#">Business areas</a>
-					</li>
-					<li>
-						<a href="#">Featured images</a>
-					</li>
-					<li>
-						<a href="#">Gear cage</a>
-					</li>
-					<li>
-						<a href="#">Contact</a>
-					</li>
-					<li>
-						<a href="#">Get template</a>
-					</li>
-				</ul>
-			</nav>
-		</div>
-	</header> -->
 	<section class="aperture_studios">
 			<div class="aperture_container">
 					<h3>Photographer & Filmmaker</h3>	
@@ -82,8 +56,8 @@
 		<div class="cent_con">
 			<h2>What we do.</h2>
 			<h3>The areas that we're specialized in.</h3>
-			<div id="accordion" >
-			  <h3>Section 1</h3>
+			<div id="accordion">
+			  <h3>accordion 1</h3>
 			  <div class="doc d-flex">
 				<article>
 					<img src="img/Product.jpg" alt="Product">
@@ -102,7 +76,7 @@
 					</div>
 				</article>
 			  </div>
-			  <h3>Section 2</h3>
+			  <h3>accordion 2</h3>
 			  <div class="doc d-flex">
 				<article>
 					<img src="img/Drone.jpg" alt="Drone">
@@ -186,83 +160,38 @@
 		<h2>Past clients</h2>
 		<h4>Trusted by your favourite companies</h4>
 		<div class="clien_art owl-carousel">
-				<article>
-					<a href="#"><img src="img/client1.svg" alt="logo"></a>
-				</article>
-				<article>
-					<a href="#"><img src="img/client2.svg" alt="logo"></a>
-				</article>
-				<article>
-					<a href="#"><img src="img/client3.svg" alt="logo"></a>
-				</article>
-				<article>
-					<a href="#"><img src="img/client4.svg" alt="logo"></a>
-				</article>
-				<article>
-					<a href="#"><img src="img/client5.svg" alt="logo"></a>
-				</article>
-				<article>
-					<a href="#"><img src="img/client1.svg" alt="logo"></a>
-				</article>
-				<article>
-					<a href="#"><img src="img/client2.svg" alt="logo"></a>
-				</article>
-				<article>
-					<a href="#"><img src="img/client3.svg" alt="logo"></a>
-				</article>
-				<article>
-					<a href="#"><img src="img/client4.svg" alt="logo"></a>
-				</article>
-				<article>
-					<a href="#"><img src="img/client5.svg" alt="logo"></a>
-				</article>				
-				<article>
-					<a href="#"><img src="img/client1.svg" alt="logo"></a>
-				</article>
-				<article>
-					<a href="#"><img src="img/client2.svg" alt="logo"></a>
-				</article>
-				<article>
-					<a href="#"><img src="img/client3.svg" alt="logo"></a>
-				</article>
-				<article>
-					<a href="#"><img src="img/client4.svg" alt="logo"></a>
-				</article>
-				<article>
-					<a href="#"><img src="img/client5.svg" alt="logo"></a>
-				</article>
-				<article>
-					<a href="#"><img src="img/client1.svg" alt="logo"></a>
-				</article>
-				<article>
-					<a href="#"><img src="img/client2.svg" alt="logo"></a>
-				</article>
-				<article>
-					<a href="#"><img src="img/client3.svg" alt="logo"></a>
-				</article>
-				<article>
-					<a href="#"><img src="img/client4.svg" alt="logo"></a>
-				</article>
-				<article>
-					<a href="#"><img src="img/client5.svg" alt="logo"></a>
-				</article>
-				<article>
-					<a href="#"><img src="img/client1.svg" alt="logo"></a>
-				</article>
-				<article>
-					<a href="#"><img src="img/client2.svg" alt="logo"></a>
-				</article>
-				<article>
-					<a href="#"><img src="img/client3.svg" alt="logo"></a>
-				</article>
-				<article>
-					<a href="#"><img src="img/client4.svg" alt="logo"></a>
-				</article>
-				<article>
-					<a href="#"><img src="img/client5.svg" alt="logo"></a>
-				</article>
-				</div>
-			</div>
+			<a href="#"><img src="img/client1.svg" alt="logo"></a>
+			<a href="#"><img src="img/client2.svg" alt="logo"></a>
+			<a href="#"><img src="img/client3.svg" alt="logo"></a>
+			<a href="#"><img src="img/client4.svg" alt="logo"></a>
+			<a href="#"><img src="img/client5.svg" alt="logo"></a>
+			<a href="#"><img src="img/client1.svg" alt="logo"></a>
+			<a href="#"><img src="img/client2.svg" alt="logo"></a>
+			<a href="#"><img src="img/client3.svg" alt="logo"></a>
+			<a href="#"><img src="img/client4.svg" alt="logo"></a>
+			<a href="#"><img src="img/client5.svg" alt="logo"></a>
+			<a href="#"><img src="img/client1.svg" alt="logo"></a>
+			<a href="#"><img src="img/client2.svg" alt="logo"></a>
+			<a href="#"><img src="img/client3.svg" alt="logo"></a>
+			<a href="#"><img src="img/client4.svg" alt="logo"></a>
+			<a href="#"><img src="img/client5.svg" alt="logo"></a>
+			<a href="#"><img src="img/client1.svg" alt="logo"></a>
+			<a href="#"><img src="img/client2.svg" alt="logo"></a>
+			<a href="#"><img src="img/client3.svg" alt="logo"></a>
+			<a href="#"><img src="img/client4.svg" alt="logo"></a>
+			<a href="#"><img src="img/client5.svg" alt="logo"></a>
+			<a href="#"><img src="img/client1.svg" alt="logo"></a>
+			<a href="#"><img src="img/client2.svg" alt="logo"></a>
+			<a href="#"><img src="img/client3.svg" alt="logo"></a>
+			<a href="#"><img src="img/client4.svg" alt="logo"></a>
+			<a href="#"><img src="img/client5.svg" alt="logo"></a>
+			<a href="#"><img src="img/client3.svg" alt="logo"></a>
+			<a href="#"><img src="img/client4.svg" alt="logo"></a>
+			<a href="#"><img src="img/client5.svg" alt="logo"></a>
+			<a href="#"><img src="img/client3.svg" alt="logo"></a>
+			<a href="#"><img src="img/client4.svg" alt="logo"></a>
+			<a href="#"><img src="img/client5.svg" alt="logo"></a>
+		</div>
 	</section>
 	<section class="Nepal">
 		<div class="description3">
